--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -119,6 +119,17 @@
         android:id="@+id/place_info"
         android:src="@drawable/ic_info"/>
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/relLayout1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="60dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/ic_grupos"
+        android:src="@drawable/ic_launcher_background"/>
+
 
 
 </RelativeLayout>
