--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -128,7 +128,18 @@
         android:layout_marginTop="60dp"
         android:scaleType="centerCrop"
         android:id="@+id/ic_grupos"
-        android:src="@drawable/ic_group_add_white_24dp"/>
+        android:src="@drawable/ic_group_add_black_24dp"/>
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/relLayout1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="110dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/ic_limpiarmarcadores"
+        android:src="@drawable/ic_delete_sweep_white_24dp"/>
 
 
 
